# vdf-competition

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt  classgroup.h  classgroupOld.cpp  classgroupSquarer.cpp  classgroupSquarer.h  classgroupSquarerOpenMP.cpp  classgroupSquarerThreads.cpp  classgroup_try.h  funcs.cpp  funcs.h  funcs_cycles.cpp  mpz_int.h  relic_int.h  test_bi.cpp  test_bm.cpp  test_cg.cpp  test_compare.cpp  test_div.cpp  test_dutta.cpp  test_gcdext.cpp  test_mul.cpp  test_mul_openmp.cpp  test_mul_smalla.cpp  test_mul_thread.cpp  test_profile.cpp  test_pw.cpp  test_quick.cpp  test_reduce.cpp  test_sample.cpp  test_sample_print.cpp  test_sqr.cpp  test_vdf4.cpp  timer.h  type_info.h
src/relic/: CMakeLists.txt
src/relic/cmake/: arch.cmake  bn.cmake
src/relic/include/: relic.h  relic_arch.h  relic_bn.h  relic_conf.h.in  relic_core.h  relic_err.h  relic_md.h  relic_util.h
src/relic/include/low/: relic_bn_low.h
src/relic/src/: CMakeLists.txt  relic_core.c  relic_err.c
src/relic/src/bn/: my_bn_div.all  rbn16.c  rbn32.c  rbnf32.c  relic_bn.c  relic_bn_div.c  relic_bn_div_fast.c  relic_bn_gcd.c  relic_bn_mem.c  relic_bn_mod.c  relic_bn_mul.c  relic_bn_mxp.c  relic_bn_prime.c  relic_bn_sqr.c  relic_bn_util.c
src/relic/src/low/easy/: relic_bn_div_low.c
src/relic/src/md/: relic_md_sha256.c
